testsuite/tests/properties/invalid_comparison/test.out
test.py:15: error: Comparisons require the same type for both operands (got Int and BigInt)
Done
